// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cancel GET (Enforcement listed building) /new should render the correct options for an ELB enforcement notice appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - cancel appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Why are you cancelling the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio" name="cancelReasonRadio"
                                        type="radio" value="invalid">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio">Appeal invalid</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-2" name="cancelReasonRadio"
                                        type="radio" value="enforcement-notice-withdrawn">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-2">LPA has withdrawn the enforcement notice</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-3" name="cancelReasonRadio"
                                        type="radio" value="withdrawal">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-3">Request to withdraw appeal</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel GET /new should render the cancel appeal page with radio components 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - cancel appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Why are you cancelling the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio" name="cancelReasonRadio"
                                        type="radio" value="invalid">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio">Appeal invalid</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-2" name="cancelReasonRadio"
                                        type="radio" value="withdrawal">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-2">Request to withdraw appeal</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel GET /new should render the correct options for an enforcement notice appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - cancel appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Why are you cancelling the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio" name="cancelReasonRadio"
                                        type="radio" value="invalid">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio">Appeal invalid</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-2" name="cancelReasonRadio"
                                        type="radio" value="enforcement-notice-withdrawn">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-2">LPA has withdrawn the enforcement notice</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-3" name="cancelReasonRadio"
                                        type="radio" value="did-not-pay">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-3">Did not pay the ground (a) fee</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-4" name="cancelReasonRadio"
                                        type="radio" value="withdrawal">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-4">Request to withdraw appeal</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel GET /new should render the default options for an enforcement notice appeal when feature flag is off 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - cancel appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Why are you cancelling the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio" name="cancelReasonRadio"
                                        type="radio" value="invalid">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio">Appeal invalid</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-2" name="cancelReasonRadio"
                                        type="radio" value="withdrawal">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-2">Request to withdraw appeal</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel Get /check-details should render the check details screen 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and cancel appeal</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you cancelling the appeal?</dt>
                    <dd                     class="govuk-summary-list__value">Did not pay the ground (a) fee</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/cancel?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F5623%2Fcancel">Change <span class="govuk-visually-hidden">Why are you cancelling the appeal?</span></a>
                        </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details id="appellant-preview" class="govuk-details">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text"></div>
                    </details>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details id="lpa-preview" class="govuk-details">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                        </summary>
                        <div class="govuk-details__text"></div>
                    </details>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Cancel appeal</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel POST /new should render a 500 error page if cancelReasonRadio is present in the request body but not set to a valid value 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">Report an IT problem</a> if the problem continues.</p>
        </div>
    </div>
</main>"
`;

exports[`cancel POST /new should render cancel appeal page with errors if cancelReasonRadio is not present in request body 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#cancel-reason-radio">Select why you are cancelling the appeal</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - cancel appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" aria-describedby="cancel-reason-radio-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Why are you cancelling the appeal?</h1>
                                </legend>
                                <p id="cancel-reason-radio-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select why you are cancelling
                                    the appeal</p>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio" name="cancelReasonRadio"
                                        type="radio" value="invalid">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio">Appeal invalid</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="cancel-reason-radio-2" name="cancelReasonRadio"
                                        type="radio" value="withdrawal">
                                        <label class="govuk-label govuk-radios__label" for="cancel-reason-radio-2">Request to withdraw appeal</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
